--- a/assets/css/partials/_content.scss
+++ b/assets/css/partials/_content.scss
@@ -37,7 +37,7 @@ body {
       transition: all 100ms ease-in;
       box-shadow: 0 10px 40px rgba(0,0,0,0.15);
       @media (max-width: 650px) {
-        transform: scale(11  );
+        transform: scale(1);
       }
     }
     @media (max-width: 2200px) {
